--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install
+    - run: cd frontend &&  npm install
     #-  name: Print GITHUB_RUN_RESULT
     #   run: echo "GITHUB_RUN_RESULT: ${{ env.GITHUB_RUN_RESULT }}"
 
@@ -96,9 +96,9 @@ jobs:
     - name: Install Python dependencies
       run: |
         python3 -m pip install --upgrade pip
-        pip install -r dev-requirements.txt
-        pip install -r test-requirements.txt
-        pip install -r integration-requirements.txt
+        cd lib && pip install -r dev-requirements.txt
+        cd lib && pip install -r test-requirements.txt
+        cd lib && pip install -r integration-requirements.txt
       
     #-  name: Print GITHUB_RUN_RESULT
     #   run: echo "GITHUB_RUN_RESULT: ${{ env.GITHUB_RUN_RESULT }}"
