--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,8 +97,8 @@ jobs:
       run: |
         python3 -m pip install --upgrade pip
         cd lib && pip install -r dev-requirements.txt
-        cd lib && pip install -r test-requirements.txt
-        cd lib && pip install -r integration-requirements.txt
+        pip install -r test-requirements.txt
+        pip install -r integration-requirements.txt
       
     #-  name: Print GITHUB_RUN_RESULT
     #   run: echo "GITHUB_RUN_RESULT: ${{ env.GITHUB_RUN_RESULT }}"
