--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: |
         cd frontend
-        npm install
+        npm install --force
 
     #-  name: Print GITHUB_RUN_RESULT
     #   run: echo "GITHUB_RUN_RESULT: ${{ env.GITHUB_RUN_RESULT }}"
